# jina-embeddings-v4

./: README.md  chunk_image_similarity.json  encoder-bacnkbone.md  images_and_chunking.ipynb  jina-embeddings-v4-test.ipynb  load_pdf_langchain.ipynb  main.py  pyproject.toml
qdrant_data/: raft_state.json
qdrant_data/collections/pdf_multimodal/: config.json
qdrant_data/collections/pdf_multimodal/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/pdf_multimodal/0/segments/24db42d6-c6c6-4b2b-913e-a252fb17715a/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/pdf_multimodal/0/segments/442d5c8b-401b-4062-847d-4a35ca85b85b/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/pdf_multimodal/0/segments/461daeb5-aa97-495e-9bfb-8b9ec563a49a/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/pdf_multimodal/0/segments/7ff79124-c329-41d3-b66c-1ce4e666d230/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/pdf_multimodal/0/segments/94bbe078-6636-402a-af2e-d359d185e2a1/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/pdf_multimodal/0/segments/963eff9e-dbaf-4739-bacc-57e0a5dd97ba/: segment.json
qdrant_data/collections/pdf_multimodal/0/segments/963eff9e-dbaf-4739-bacc-57e0a5dd97ba/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/pdf_multimodal/0/segments/d630152e-a1d5-4995-8e1e-8b3db5bc4645/: mutable_id_tracker.mappings  segment.json
(+6 files in other folders)
