[project]
name = "jina-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.33.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "peft>=0.16.0",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.0",
    "torchvision>=0.22.1",
    "transformers>=4.53.1",
]
